# artifactor

./: README.md  setup.cfg  setup.py
src/artifactor/: __init__.py  __main__.py  utils.py
src/artifactor/plugins/: filedump.py  logger.py  prometheus.py  reporter.py
