[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100

[metadata]
name = artifactor

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
entry_points = file:entry_points.txt

install_requires =
        attrs
        cached_property
        click
        flask
        importscan
        pyopenssl
        pytest
        pytest-cov
        pytest-polarion-collect
        pytest-report-parameters
        PyYAML
        requests
        riggerlib
        taretto>=0.5.3
